<resources>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_init">InitActivity</string>
    <string name="placeholder_first_name">Name</string>
    <string name="placeholder_last_name">Surname</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_password">Password</string>
    <string name="placeholder_password_repeat">Repeat Password</string>
    <string name="login_title">Log in</string>
    <string name="login_desc">Enter your details to continue. If\nyou’ve forgotten, we’ll help you out.</string>
    <string name="login_btn_signin">Sign in</string>
    <string name="login_alert_title_login_error">Invalid input.</string>
    <string name="login_alert_description_not_verified_email">Email not verified. Please check your email</string>
    <string name="login_alert_description_not_valid_email">Invalid email</string>
    <string name="login_alert_description_user_not_found">User not found</string>
    <string name="login_alert_description_wrong_pass">Wrong password</string>
    <string name="login_alert_description_login_error_unknown">Unknown error</string>
    <string name="login_forgot_pwd"><u>Forgot password?</u></string>
    <string name="login_not_have_account">Don’t you have an account yet?</string>
    <string name="login_signup"><u>Register</u></string>
    <string name="signup_title">Register</string>
    <string name="signup_desc">Enter your details to have access\nto you analytics </string>
    <string name="signup_btn_create_account">Create account</string>
    <string name="signup_have_account">Do you already have an account?</string>
    <string name="signup_login"><u>Log in</u></string>
    <string name="signup_error_empty_fields">Please enter your first name and last name</string>
    <string name="signup_error_password">Password must be at least 6 characters long</string>
    <string name="signup_error_email_pattern">Please use a valid email</string>
    <string name="signup_error_email_used">This email is already in use</string>
    <string name="signup_error_server_error">There was a problem with the signup, please try again</string>
    <string name="forgotpwd_settings"><u>Forgot password?</u></string>
    <string name="forgotpwd_title">Trouble logging in?</string>
    <string name="forgotpwd_desc">Enter your email and we’ll send you a link to get back into your account.</string>
    <string name="forgotpwd_send">Send login link</string>
    <string name="forgotpwd_can_not_reset">Can\’t reset your password?</string>
    <string name="forgotpwd_create_new">Create new account</string>
    <string name="forgotpwd_or">OR</string>
    <string name="privacy_title">Privacy</string>
    <string name="privacy_item1">I agree to the Privacy Policy.*</string>
    <string name="privacy_item2">I accept to the Terms and Conditions.*</string>
    <string name="privacy_item3">I give my consent for the data controller to process my personal data, including physiological data, for the purpose of structuring and displaying them in the user profile. Please refer to the consent information*\n\n\nFor more information on the processing of personal data carried out by the data controller, please refer to the privacy policy.</string>
    <string name="privacy_note">*You can revoke your consent at any time by sending a message to <u>info@kamleon.com</u></string>
    <string name="privacy_button_next">Next</string>
    <string name="privacy_word_terms">Terms and Conditions</string>
    <string name="privacy_word_privacy">Privacy Policy</string>
    <string name="privacy_word_consent">consent information</string>
    <string name="privacy_button_accept_all">Accept All</string>
    <string name="onboard_button_skip">Skip</string>
    <string name="onboard_button_next">Next</string>
    <string name="onboard_button_start">Start!</string>
    <string name="onboard_button_step">%1$d/6</string>
    <string name="onboard_bottom_text">You can change it later in the App settings</string>
    <string name="onboard_bottom_later">Skip, I\'ll fill it later</string>
    <string name="onboard_noti_title">Stay updated with your latest sample</string>
    <string name="onboard_noti_sub1">Activate your notifications</string>
    <string name="onboard_noti_sub2">Activate notifications to ensure you\'re always up to date.</string>
    <string name="onboard_location_title">Tailor hydration to weather conditions</string>
    <string name="onboard_location_sub1">Activate your location</string>
    <string name="onboard_location_sub2">Enable Kamleon to use location data for personalized services, while considering privacy implications.</string>
    <string name="onboard_birthday_title">Birth date</string>
    <string name="onboard_height_title">Indicate your height</string>
    <string name="onboard_weight_title">Indicate your weight</string>
    <string name="onboard_gender_title">Indicate your gender</string>
    <string-array name="onboard_gender_values">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
        <item>Prefer not to say</item>
    </string-array>
    <string name="setting_button_save">Save</string>
    <string name="setting_option_account">ACCOUNT</string>
    <string name="setting_option_pref">PREFERENCES</string>
    <string name="setting_option_logout">LOG OUT</string>
    <string name="setting_label_acc_data">ACCOUNT DATA</string>
    <string name="setting_label_surname">SURNAME</string>
    <string name="setting_label_name">NAME</string>
    <string name="setting_label_email">E-MAIL</string>
    <string name="setting_label_password">PASSWORD</string>
    <string name="setting_label_pin">PIN</string>
    <string name="setting_label_info">INFORMATION</string>
    <string name="setting_label_help">HELP</string>
    <string name="setting_label_dsp">INFORMATION ABOUT CONSENT</string>
    <string name="setting_label_tos">TERMS AND CONDITIONS</string>
    <string name="setting_label_pp">PRIVACY POLICY</string>
    <string name="setting_desc_acc1">The password is the personalized combination of characters that you enter to access the website and the app securely. </string>
    <string name="setting_desc_acc2">The PIN is the personalized code that you enter on the screen before starting your experience.</string>
    <string name="setting_label_acc_info">ACCOUNT INFORMATION</string>
    <string name="setting_label_org">ORGANIZATION</string>
    <string name="setting_label_org_short">ORG.</string>
    <string name="setting_label_center">CENTER</string>
    <string name="setting_label_team">TEAM</string>
    <string name="setting_label_user_data">USER DATA</string>
    <string name="setting_label_user_gender">GENDER</string>
    <string name="setting_label_user_weight">WEIGHT</string>
    <string name="setting_label_user_height">HEIGHT</string>
    <string name="setting_label_user_weight_text">%1$s Kg</string>
    <string name="setting_label_user_height_text">%1$s cm</string>
    <string name="setting_label_user_birthdate">DATE OF BIRTH</string>
    <string name="setting_label_noti">NOTIFICATIONS</string>
    <string name="setting_label_analytics">ANALYTICS</string>
    <string name="setting_label_location">LOCATION</string>
    <string name="setting_label_awuta">ALLOW WHILE USING THE APP</string>
    <string name="setting_label_allow_once">ALLOW ONCE</string>
    <string name="setting_label_not_allow">DON\'T ALLOW</string>
    <string name="setting_desc_pref1">The user data is essential to deliver personalized and precise metric results and recommendations.</string>
    <string name="setting_desc_pref2">You will receive Kamleon notifcation with the score you have had after every urinal use.</string>
    <string name="setting_desc_pref3">Enable Kamleon to use location data for personalized services, while considering privacy implications.</string>
    <string name="setting_display_name">%1$s %2$s</string>
    <string name="setting_deactivate">Deactivate or delete my account</string>
    <string name="image_pick_gallery">Choose from library</string>
    <string name="image_pick_camera">Take photo</string>
    <string name="image_pick_remove">Remove current picture</string>
    <string name="email_email">E-MAIL</string>
    <string name="email_new">NEW E-MAIL</string>
    <string name="email_confirm">CONFIRM E-MAIL</string>
    <string name="pin_settings"><u>Forgot PIN?</u></string>
    <string name="pin_title">SET A NEW PIN</string>
    <string name="pin_pin">CURRENT PIN</string>
    <string name="pin_new">NEW PIN</string>
    <string name="pin_confirm">CONFIRM PIN</string>
    <string name="pin_desc">The PIN is the personalized code that you enter on the screen before starting your experience.\n\n<b>Set Up Your PIN:</b>\n1. Enter a six digits numeric code of your choice.\n2. Confirm and start your secure journey!</string>
    <string name="pin_error_title">Error</string>
    <string name="pin_error_dontmatch">New PIN and Confirm PIN do not match</string>
    <string name="pin_error_pin">Current PIN is not valid</string>
    <string name="pwd_error_title">Error</string>
    <string name="pwd_error_dontmatch">New password and confirm password do not match</string>
    <string name="pwd_error_generic">There was an error updating your password</string>
    <string name="pwd_title">SET A NEW PASSWORD</string>
    <string name="pwd_password">CURRENT PASSWORD</string>
    <string name="pwd_new">NEW PASSWORD</string>
    <string name="pwd_confirm">CONFIRM PASSWORD</string>
    <string name="pwd_desc">The password is the personalized combination of characters that you enter to access the website securely.\n\n<b>Set Up Your Password:</b>\n1. Choose a strong password: Use a combination of letters, numbers, and symbols and ensure it\'s unique and not easily guessable.\n2. Confirm and start your secure journey!</string>
    <string name="delete_title">Deactivate or delete your account</string>
    <string name="delete_deactivate">DEACTIVATE</string>
    <string name="delete_delete">DELETE</string>
    <string name="delete_deactivate_desc">Deactivating can be temporary. Your profile, your name and your data will not be available.</string>
    <string name="delete_delete_desc">Deleting your account will permanently remove all your profile data.</string>
    <string name="tab_home">HOME</string>
    <string name="tab_analytic">ANALYTICS</string>
    <string name="tab_qr">SCAN</string>
    <string name="qr_scan_now">SCAN NOW!</string>
    <string name="qr_intro_text">Use your smartphone to scan the QR code on the screen of the urinal</string>
    <string name="graph_header_item_daily">Daily</string>
    <string name="graph_header_item_weekly">Weekly</string>
    <string name="graph_header_item_monthly">Monthly</string>
    <string name="graph_header_item_yearly">Yearly</string>
    <string name="graph_header_average">AVERAGE</string>
    <string name="graph_footer_streak">Streak</string>
    <string name="graph_footer_limit">Limits</string>
    <string name="graph_footer_number_all">/%1$s</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_policy_title">Privacy Policy</string>
    <string name="dialog_policy_desc">Protecting your privacy is crucial. Before using the app, kindly agree to the policy. For more details, refer to the <u>Privacy Policy</u></string>
    <string name="dialog_policy_agree">Agree</string>
    <string name="dialog_policy_disagree"><u>Disagree, close the app</u></string>
    <string name="dialog_verify_title">Verify your Email</string>
    <string name="dialog_verify_desc">We have sent an email to %1$s\n\nYou need to verify your email to continue. If you have not received the verification email, please check your "Spam" or "Bulk Email" folder. You can also click the resend button below to have another email sent to you.</string>
    <string name="dialog_verify_resend"><u>Resend verification Email</u></string>
</resources>