<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_activity"
    tools:context=".activities.ForgotPwdActivity">
    <ImageButton
        android:layout_width="@dimen/nav_back_button_size"
        android:layout_height="@dimen/nav_back_button_size"
        android:src="@drawable/icn_cross"
        android:id="@+id/btnClose"
        android:background="@color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/nav_back_button_left"
        android:layout_marginTop="@dimen/nav_back_button_top"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="90dp"
        android:paddingHorizontal="44dp"
        android:id="@+id/screenHeaderLayout"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CircularMediumFont"
            android:layout_marginTop="8dp"
            android:textColor="@color/kamleon_dark_grey"
            android:text="@string/forgotpwd_title"
            android:textSize="@dimen/ts_20"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CircularRegularFont"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:textColor="@color/kamleon_dark_grey"
            android:text="@string/forgotpwd_desc"
            android:textSize="@dimen/ts_16"/>

        <com.kamleonapp.views.KamleonInputBox
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_text_box_height"
            android:id="@+id/inputBoxEmail"
            android:layout_marginTop="52dp"
            app:placeholder="@string/placeholder_email"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/round_blue_button_height"
            android:paddingVertical="0dp"
            android:id="@+id/btnSendLoginLink"
            android:background="@drawable/bg_btn_round_blue"
            android:textAppearance="@style/RoundBlueButtonTextStyle"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"
            android:text="@string/forgotpwd_send"
            android:textColor="@drawable/color_text_button_blue_round"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CircularBookFont"
                android:textSize="@dimen/ts_12"
                android:textColor="@color/kamleon_secondary_grey_60"
                android:text="@string/forgotpwd_can_not_reset"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_centerInParent="true"
                    android:background="@color/kamleon_dark_grey" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:gravity="center"
                    android:paddingHorizontal="10dp"
                    android:background="@color/white"
                    style="@style/CircularBookFont"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/ts_12"
                    android:textColor="@color/kamleon_secondary_grey_60"
                    android:text="@string/forgotpwd_or"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                style="@style/CircularRegularFont"
                android:id="@+id/tvCreateNewAcc"
                android:text="@string/forgotpwd_create_new"
                android:textSize="@dimen/ts_12"
                android:clickable="true"
                android:paddingVertical="4dp"
                android:textColor="@drawable/color_text_button"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>